# ghiblimovies

./: .env.template  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
actor/: admin.py  apps.py  models.py  tests.py
actor/migrations/: 0001_initial.py  0002_auto_20201207_0236.py
ghiblimovies/: asgi.py  celery.py  settings.py  urls.py  utils.py  wsgi.py
movie/: admin.py  models.py  tasks.py  tests.py  utils.py  views.py
movie/migrations/: 0001_initial.py  0002_auto_20201208_0259.py  0003_auto_20201208_0508.py
templates/: base.html  movies.html
user/: admin.py  models.py  tests.py
user/management/commands/: initadmin.py
user/migrations/: 0001_initial.py
