[tool.poetry]
name = "ghiblimovies"
version = "0.1.0"
description = "Movie list from Studio Ghibli"
authors = ["Emin Mastizada <emin@linux.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.4"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
celery = "^5.0.3"
django-celery-beat = "^2.1.0"
django-redis = "^4.12.1"
requests = "^2.25.0"
sentry-sdk = "^0.19.4"
django-cachalot = "^2.3.3"

[tool.poetry.dev-dependencies]
flake8-black = "^0.2.1"
isort = "^5.6.4"
coverage = {extras = ["toml"], version = "^5.3"}
ipython = "^7.19.0"

[tool.black]
line-length = 119
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | \.pytest_cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 119

[tool.coverage.run]
source = ["."]
omit = ["manage.py", "ghiblimovies/wsgi.py", "ghiblimovies/asgi.py", "ghiblimovies/celery.py", "ghiblimovies/utils.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
